# fabricatio-maturin-template

./: README.md
fabricatio-{{ cookiecutter.project_name }}/: Cargo.toml  README.md  pyproject.toml
fabricatio-{{ cookiecutter.project_name }}/python/fabricatio_{{ cookiecutter.project_name }}/: rust.pyi
fabricatio-{{ cookiecutter.project_name }}/src/: lib.rs
hooks/: post_gen_project.py
{{ cookiecutter.full_name }}/: Cargo.toml  README.md  pyproject.toml
{{ cookiecutter.full_name }}/python/{{ cookiecutter.package_name }}/: config.py  rust.pyi
{{ cookiecutter.full_name }}/python/{{ cookiecutter.package_name }}/capabilities/: {{ cookiecutter.project_name }}.py
{{ cookiecutter.full_name }}/src/: lib.rs  {{ cookiecutter.project_name }}.rs
