[project]
name = "{{ cookiecutter.full_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
authors = [
    { name = "Whth", email = "zettainspector@foxmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.14"
dependencies = [

    "fabricatio-core"
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "{{  cookiecutter.package_name }}.rust"


[project.urls]
Homepage = "https://github.com/Whth/fabricatio"
Repository = "https://github.com/Whth/fabricatio"
Issues = "https://github.com/Whth/fabricatio/issues"
