[project]
name = "{{ cookiecutter.full_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
license = "{{ cookiecutter.license }}"
authors = [
    { name = "{{ cookiecutter.auther }}", email = "{{ cookiecutter.email }}" }
]
classifiers = [
    "License :: OSI Approved :: {{ cookiecutter.license }} License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
requires-python = ">=3.12,<3.14"
dependencies = [

    "fabricatio-core"
]

[dependency-groups]
dev = [
    "pytest",
]



[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "{{  cookiecutter.package_name }}.rust"


[project.urls]
Homepage = "https://github.com/Whth/fabricatio"
Repository = "https://github.com/Whth/fabricatio"
Issues = "https://github.com/Whth/fabricatio/issues"
